--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h2 class="text-xl font-semibold mb-2">1. Thu thập và sử dụng thông tin</h2>
       <p>Ứng dụng có thể thu thập thông tin khi bạn tải về và sử dụng, bao gồm:</p>
       <ul class="list-disc list-inside ml-4 mt-2">
-        <li>Địa chỉ IP của thiết bị</li>
-        <li>Lịch sử truy cập, thời gian, ngày dùng</li>
-        <li>Hệ điều hành trên thiết bị</li>
+        <li>Địa chỉ IP của thiết bị.</li>
+        <li>Lịch sử truy cập, thời gian, ngày dùng.</li>
+        <li>Hệ điều hành trên thiết bị.</li>
       </ul>
       <p class="mt-2">Không thu thập vị trí chính xác. Thông tin có thể dùng để liên hệ, thông báo hoặc khuyến mãi.</p>
       <p>Thông tin cá nhân (email, họ tên, ảnh, v.v.) được thu thập đúng chính sách bảo mật.</p>
@@ -34,9 +34,9 @@
       <h2 class="text-xl font-semibold mb-2">2. Truy cập từ thiết bị</h2>
       <p>Ứng dụng có thể yêu cầu truy cập:</p>
       <ul class="list-disc list-inside ml-4 mt-2">
-        <li>Bộ nhớ ảnh và tệp</li>
-        <li>Máy ảnh và micro</li>
-        <li>Truy cập mạng, gửi thông báo</li>
+        <li>Bộ nhớ ảnh và tệp.</li>
+        <li>Máy ảnh và micro.</li>
+        <li>Truy cập mạng, gửi thông báo.</li>
       </ul>
       <p>Việc cấp quyền là tùy chọn và minh bạch.</p>
     </section>
@@ -51,9 +51,9 @@
       <p>Ứng dụng sử dụng dịch vụ bên thứ ba như Google Play, Apple Store,...</p>
       <p>Thông tin có thể được chia sẻ trong các trường hợp:</p>
       <ul class="list-disc list-inside ml-4 mt-2">
-        <li>Theo yêu cầu pháp lý</li>
-        <li>Bảo vệ an toàn hoặc điều tra gian lận</li>
-        <li>Với bên cung cấp dịch vụ đáng tin cậy</li>
+        <li>Theo yêu cầu pháp lý.</li>
+        <li>Bảo vệ an toàn hoặc điều tra gian lận.</li>
+        <li>Với bên cung cấp dịch vụ đáng tin cậy.</li>
       </ul>
     </section>
 
@@ -85,7 +85,7 @@
 
     <section>
       <h2 class="text-xl font-semibold mb-2">10. Liên hệ</h2>
-      <p>Mọi thắc mắc xin liên hệ: <a href="mailto:farmtalk.help@gmail.com" class="text-blue-600 underline">farmtalk.help@gmail.com</a></p>
+      <p>Mọi thắc mắc xin liên hệ: <a href="mailto:farmtalk.help@gmail.com" class="text-blue-600 underline">farmtalk.help@gmail.com.</a></p>
     </section>
   </main>
 
