--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <section>
       <h2 class="text-xl font-semibold mb-2">10. Liên hệ</h2>
-      <p>Mọi thắc mắc xin liên hệ: <a href="mailto:farmtalk.help@gmail.com" class="text-blue-600 underline">farmtalk.help@gmail.com.</a></p>
+      <p>Mọi thắc mắc xin liên hệ: <a href="mailto:farmtalk.help@gmail.com" class="text-blue-600 underline">farmtalk.help@gmail.com</a></p>
     </section>
   </main>
 
