--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Main content -->
   <main class="max-w-4xl mx-auto p-6 space-y-8">
     <section>
-      <h2 class="text-xl font-semibold mb-2">1. Thu thập và sử dụng thông tin</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">1. Thu thập và sử dụng thông tin</h2>
       <p>Ứng dụng có thể thu thập thông tin khi bạn tải về và sử dụng, bao gồm:</p>
       <ul class="list-disc list-inside ml-4 mt-2">
         <li>Địa chỉ IP của thiết bị.</li>
@@ -31,7 +31,7 @@
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">2. Truy cập từ thiết bị</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">2. Truy cập từ thiết bị</h2>
       <p>Ứng dụng có thể yêu cầu truy cập:</p>
       <ul class="list-disc list-inside ml-4 mt-2">
         <li>Bộ nhớ ảnh và tệp.</li>
@@ -42,12 +42,12 @@
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">3. Nội dung do người dùng tạo</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">3. Nội dung do người dùng tạo</h2>
       <p>Bạn chịu trách nhiệm với nội dung chia sẻ. Nội dung vi phạm sẽ bị gỡ, ẩn hoặc khóa tài khoản nếu cần.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">4. Truy cập từ bên thứ ba</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">4. Truy cập từ bên thứ ba</h2>
       <p>Ứng dụng sử dụng dịch vụ bên thứ ba như Google Play, Apple Store,...</p>
       <p>Thông tin có thể được chia sẻ trong các trường hợp:</p>
       <ul class="list-disc list-inside ml-4 mt-2">
@@ -58,33 +58,33 @@
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">5. Quyền từ chối (Opt-Out)</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">5. Quyền từ chối (Opt-Out)</h2>
       <p>Bạn có thể từ chối cung cấp thông tin không bắt buộc hoặc xóa ứng dụng để ngừng thu thập dữ liệu.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">6. Chính sách lưu trữ dữ liệu</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">6. Chính sách lưu trữ dữ liệu</h2>
       <p>Dữ liệu được lưu trong thời gian bạn sử dụng và một thời gian hợp lý sau đó.</p>
       <p>Nếu cần xóa, liên hệ: <a href="mailto:farmtalk.help@gmail.com" class="text-blue-600 underline">farmtalk.help@gmail.com</a></p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">7. Trẻ em</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">7. Trẻ em</h2>
       <p>Ứng dụng không dành cho trẻ dưới 13 tuổi. Nếu phát hiện, chúng tôi sẽ xóa dữ liệu và khóa tài khoản.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">8. Bảo mật thông tin</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">8. Bảo mật thông tin</h2>
       <p>Chúng tôi bảo vệ thông tin bằng biện pháp kỹ thuật và quy trình nội bộ nghiêm ngặt.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">9. Thay đổi chính sách</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">9. Thay đổi chính sách</h2>
       <p>Chính sách có thể thay đổi định kỳ và được thông báo công khai. Việc tiếp tục sử dụng nghĩa là bạn đồng ý với các thay đổi đó.</p>
     </section>
 
     <section>
-      <h2 class="text-xl font-semibold mb-2">10. Liên hệ</h2>
+      <h2 class="text-xl font-semibold text-green-900 mb-2">10. Liên hệ</h2>
       <p>Mọi thắc mắc xin liên hệ: <a href="mailto:farmtalk.help@gmail.com" class="text-blue-600 underline">farmtalk.help@gmail.com</a></p>
     </section>
   </main>
